--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
      <div class="brutalist-container">
         <input
           placeholder="Enter a new task"
-          class="brutalist-input smooth-type"
+          class="input"
           type="text"
           id="task-input"
         />
-        <button id="add-button">Add</button>
+        <button id="add">Add</button>
       </div>
     </div>
     <ul id="todo-list"></ul>
